src/snapshots/tptp__fof__tests__fof_formula.snap
---
source: src/fof.rs
expression: parsed
---
Logic(
    Unitary(
        Atomic(
            Plain(
                PlainAtomicFormula(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "p",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
