src/snapshots/tptp__fof__tests__fof_list_formulas.snap
---
source: src/fof.rs
assertion_line: 1035
expression: parsed
snapshot_kind: text
---
ListFormula(
    [
        Unitary(
            Atomic(
                Plain(
                    PlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
