src/snapshots/tptp__fof__tests__fof_sequent-13.snap
---
source: src/fof.rs
expression: parsed
snapshot_kind: text
---
LogicSequent {
    left: ListFormula(
        [
            Binary(
                Nonassoc(
                    BinaryNonassoc {
                        left: Unary(
                            Unary(
                                UnaryConnective,
                                Unitary(
                                    Atomic(
                                        Plain(
                                            PlainAtomicFormula(
                                                Constant(
                                                    Constant(
                                                        Functor(
                                                            Lower(
                                                                LowerWord(
                                                                    "p",
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                        op: LRImplies,
                        right: Unitary(
                            Atomic(
                                Plain(
                                    PlainAtomicFormula(
                                        Constant(
                                            Constant(
                                                Functor(
                                                    Lower(
                                                        LowerWord(
                                                            "q",
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    },
                ),
            ),
            Binary(
                Nonassoc(
                    BinaryNonassoc {
                        left: Unitary(
                            Atomic(
                                Plain(
                                    PlainAtomicFormula(
                                        Constant(
                                            Constant(
                                                Functor(
                                                    Lower(
                                                        LowerWord(
                                                            "p",
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                        op: LRImplies,
                        right: Unary(
                            Unary(
                                UnaryConnective,
                                Unitary(
                                    Atomic(
                                        Plain(
                                            PlainAtomicFormula(
                                                Constant(
                                                    Constant(
                                                        Functor(
                                                            Lower(
                                                                LowerWord(
                                                                    "q",
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    },
                ),
            ),
            Unitary(
                Atomic(
                    Plain(
                        PlainAtomicFormula(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "p",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
    right: ListFormula(
        [
            Binary(
                Assoc(
                    And(
                        AndFormula(
                            [
                                Unitary(
                                    Atomic(
                                        Plain(
                                            PlainAtomicFormula(
                                                Constant(
                                                    Constant(
                                                        Functor(
                                                            Lower(
                                                                LowerWord(
                                                                    "p",
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                                Unitary(
                                    Atomic(
                                        Plain(
                                            PlainAtomicFormula(
                                                Constant(
                                                    Constant(
                                                        Functor(
                                                            Lower(
                                                                LowerWord(
                                                                    "q",
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
            ),
            Unitary(
                Atomic(
                    Defined(
                        Plain(
                            DefinedPlainFormula(
                                Constant(
                                    DefinedConstant(
                                        DefinedFunctor(
                                            AtomicDefinedWord(
                                                DollarWord(
                                                    LowerWord(
                                                        "false",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            Unitary(
                Atomic(
                    Plain(
                        PlainAtomicFormula(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "r",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
}
